Переход на DB H2. Затронуты: - Сервисы - Контроллеры - Мапперы - DTO - Созданы новые Репозитории - Добавлена схема - Обновлен pom - Обновлены properties